<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="_0_00">$0:00</string>
    <string name="total">Total:</string>
    <string name="initial_total">$0.00</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="calculate">Calculate</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="service_good">Good (18%)</string>
    <string name="service_amazing">Amazing (20%)</string>
    <string name="how_was_the_service">How was the service?</string>
</resources>