<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost_of_service" />

    <RadioGroup
        android:id="@+id/rg_tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_service_question">

        <RadioButton
            android:id="@+id/rb_amazing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/service_amazing" />

        <RadioButton
            android:id="@+id/rb_good"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/service_good" />

        <RadioButton
            android:id="@+id/rb_okay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/okay_15" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        app:layout_constraintBottom_toTopOf="@+id/btn_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_tip_options" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_round_up"
        android:layout_width="0dp"
        android:checked="true"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_tip_options" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_round_up" />

    <TextView
        android:id="@+id/tv_tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate" />

    <TextView
        android:id="@+id/tv_tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_total"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/tv_tip_label"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate" />

    <TextView
        android:id="@+id/tv_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip_label" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/tv_tip_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip_amount" />


</androidx.constraintlayout.widget.ConstraintLayout>